# Cpp-Robotics-Lab

./: .gitignore  .gitmessage  CMakeLists.txt  Makefile  README-CN.md  README.md  build_pnc.sh  config.json  main.cpp  main.h  map.pgm  map.yaml  plot_car_result.py  plot_results.py  plot_results_animation.py  run.sh
.claude/: claude.md
config/: obstacles.json
docs/: GIT_COMMIT_GUIDE.md  README.md  centerline.md  dev-guide.md  map_parser.md  plan-kdl.md  plan.md  refactor-plan.md  retrospective.md  static_obstacles.md  trajectory_optimization.md
engine/: README.md  __init__.py
include/: CirclePath.h  ComplexPath.h  KF.h  LQR.h  MPC.h  Object.h  PID.h  Path.h  Plant.h  Plant_car.h  SlalomPath.h  StraightPath.h
pipeline/: README.md  sim_dynamic_obstacles.py  sim_dynamic_obstacles_animate.py  sim_dynamic_obstacles_lateral.py  sim_engine_demo.py  sim_engine_dynamic_obstacles.py  sim_engine_dynamic_obstacles_animate.py  sim_mpc_basic.py  (+17 more)
pnc/: CMakeLists.txt  bindings.cpp
pnc/common/: types.h
pnc/control/: kf.cc  kf.h  kf_test.cc  lqr.cc  lqr_test.cc  mpc.h  pid.h
pnc/control/lqr/: lqr.h
pnc/control/mpc/: mpc.cc
pnc/control/pid/: pid.cc  pid_test.cc
pnc/motion/: astar.h  bicycle_model.h  hybrid_astar.h  map_parser.cc  map_parser.h  mpc_planner.h
pnc/motion/astar/: astar.cc  astar.h  astar_test.cc
pnc/motion/bicycle_model/: bicycle_model.cc  bicycle_model.h  bicycle_model_test.cc
pnc/motion/bspline/: bspline.cc  bspline.h  bspline_test.cc
pnc/motion/hybrid_astar/: hybrid_astar.cc  hybrid_astar.h  hybrid_astar_test.cc
pnc/motion/map_parser/: map_parser.cc
pnc/motion/mpc_planner/: mpc_planner.cc  mpc_planner.h
pnc/motion/path/: path.cc  path.h  path_test.cc
pnc/motion/safe_corridor/: safe_corridor.cc  safe_corridor.h  safe_corridor_test.cc
pnc/prediction/: dynamic_obstacle.cc  dynamic_obstacle.h
(+56 files in other folders)
